Fix testcase bugs